--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projeto de vida ^_^</title>
+</head>
+<body>
+<body>
+        <section class="conteudo-principal"></section>
+            <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+</body>
+</html>
 
